--- a/profile/Alfred.alfredpreferences/preferences/local/63d8829ad5f2a0447918979c539344a506e82a5f/appearance/prefs.plist
+++ b/profile/Alfred.alfredpreferences/preferences/local/63d8829ad5f2a0447918979c539344a506e82a5f/appearance/prefs.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>currentthemeuid</key>
-	<string>theme.bundled.osx</string>
+	<string>theme.custom.A88DD687-053C-4838-8B02-FE0099C55A0C</string>
 </dict>
 </plist>
