--- a/profile/Alfred.alfredpreferences/preferences/local/f5298546fd8d65370b630a89318887862782000d/prefs.plist
+++ b/profile/Alfred.alfredpreferences/preferences/local/f5298546fd8d65370b630a89318887862782000d/prefs.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>currentthemeuid</key>
-	<string>theme.custom.A88DD687-053C-4838-8B02-FE0099C55A0C</string>
+	<key>dontaskforpermissions</key>
+	<false/>
 </dict>
 </plist>
