--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/usr/local/opt/python/bin/python3.7",
+    "python.pythonPath": "/home/mario/.local/bin/python",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
